--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-app-template",
+    "name": "covid-19-data-visualizer",
     "version": "0.1.0",
     "license": "MIT",
     "scripts": {
@@ -10,9 +10,16 @@
         "lint": "eslint . --fix"
     },
     "dependencies": {
+        "@deck.gl/aggregation-layers": "8.2.10",
+        "@deck.gl/core": "8.2.10",
+        "@deck.gl/layers": "8.2.10",
+        "@deck.gl/react": "8.2.10",
+        "mapbox-gl": "1.12.0",
+        "papaparse": "5.3.0",
         "prop-types": "15.7.2",
         "react": "16.13.1",
         "react-dom": "16.13.1",
+        "react-map-gl": "5.2.9",
         "react-redux": "7.2.1",
         "react-router-dom": "5.2.0",
         "react-scripts": "3.4.3",
@@ -60,9 +67,9 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/tomdewildt/react-app-template"
+        "url": "https://github.com/tomdewildt/covid-19-data-visualizer"
     },
     "bugs": {
-        "url": "https://github.com/tomdewildt/react-app-template/issues"
+        "url": "https://github.com/tomdewildt/covid-19-data-visualizer/issues"
     }
 }
