--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,13 +17,14 @@
             "jsx": true
         },
         "ecmaVersion": 2018,
+        "requireConfigFile": false,
         "sourceType": "module"
     },
     "plugins": [
         "react",
         "react-hooks"
     ],
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "rules": {
         "array-bracket-spacing": [
             "error",
