--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,11 @@
         "SharedArrayBuffer": "readonly"
     },
     "parserOptions": {
+        "babelOptions": {
+            "presets": [
+                "@babel/preset-react"
+            ]
+        },
         "ecmaFeatures": {
             "jsx": true
         },
