--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "version": "0.1.0",
     "license": "MIT",
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
+        "start": "react-scripts --max_old_space_size=4096 start",
+        "build": "react-scripts --max_old_space_size=4096 build",
+        "test": "react-scripts --max_old_space_size=4096 test",
+        "eject": "react-scripts --max_old_space_size=4096 eject",
         "lint": "eslint . --fix"
     },
     "dependencies": {
